--- a/functions.ipynb
+++ b/functions.ipynb
@@ -32,10 +32,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Temperature Conversion\n",
+    "temp = int(input(\"Enter temperature : \"))\n",
+    "temp_type = str(input(\"Enter temp type : \"))\n",
+    "\n",
+    "def temp_conv(temp,temp_type):\n",
+    "    if temp_type =='c' :\n",
+    "        return int(temp* 9/5 + 32)\n",
+    "    elif temp_type == 'f' :\n",
+    "        return int((temp - 32) * 5/9)\n",
+    "    else :\n",
+    "        print(\"Please enter correct temperature type\")\n",
+    "print(temp_conv(temp,temp_type))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Password Strength checker\n",
+    "password = str(input(\"Enter your password : \"))\n",
+    "\n",
+    "def password_checker(pwd):\n",
+    "    if pwd.\n",
+    "\n",
+    "\n",
+    "print(password_checker(password))"
+   ]
   }
  ],
  "metadata": {
