--- a/patternpractice.ipynb
+++ b/patternpractice.ipynb
@@ -36,10 +36,134 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['*****', '*****', '*****', '*****']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Rectangle Pattern\n",
+    "\n",
+    "n = int(input(\"Enter number of rows : \"))\n",
+    "m = int(input(\"Enter number of columns : \"))\n",
+    "def square_pattern(n,m) : ##4\n",
+    "    lst = []\n",
+    "    for i in range(n):  ##0123 4\n",
+    "        strr = ''\n",
+    "        for j in range(m): ## 0 1 2 3\n",
+    "            ptrn = '*'\n",
+    "            strr = strr+ptrn  ## *  **  ***  ****\n",
+    "        lst.append(strr)\n",
+    "    \n",
+    "    return lst\n",
+    "\n",
+    "\n",
+    "result = square_pattern(n,m)  ## 4\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['*', '**', '***']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Right Angeled triangle\n",
+    "\n",
+    "no = int(input(\"Enter a number : \"))\n",
+    "\n",
+    "def square_pattern(no) : ##4\n",
+    "    lst = []\n",
+    "    for i in range(no):  ##0123 4\n",
+    "        strr = ''\n",
+    "        for j in range(i+1): ## 0 1 2 3\n",
+    "            ptrn = '*'\n",
+    "            strr = strr+ptrn  ## *  **  ***  ****\n",
+    "        lst.append(strr)\n",
+    "    \n",
+    "    return lst\n",
+    "\n",
+    "\n",
+    "result = square_pattern(no)  ## 4\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['***', '**', '*']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Inverted Right Angeled Triangle\n",
+    "\n",
+    "no = int(input(\"Enter a number : \"))\n",
+    "\n",
+    "def square_pattern(n) : ##4\n",
+    "    lst = []\n",
+    "    for i in range(n,0,-1):  ##0123 4\n",
+    "        strr = '*'*i\n",
+    "        \n",
+    "        lst.append(strr)\n",
+    "    \n",
+    "    return lst\n",
+    "\n",
+    "\n",
+    "result = square_pattern(no)  ## 4\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['*', '**', '***']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Pyramid pattern\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Right Angled Triangle with Numbers\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
