--- a/patternpractice.ipynb
+++ b/patternpractice.ipynb
@@ -157,13 +157,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '22', '333', '4444', '55555']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Right Angled Triangle with Numbers\n",
+    "\n",
+    "no = int(input(\"Enter a number : \"))\n",
+    "\n",
+    "def square_pattern(no) : ##4\n",
+    "    lst = []\n",
+    "    for i in range(1,no+1):  ##0123 4\n",
+    "        strr = str(i)*(i)\n",
+    "        \n",
+    "        lst.append(strr)\n",
+    "    \n",
+    "    return lst\n",
+    "\n",
+    "\n",
+    "result = square_pattern(no)  ## 4\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2 3', '4 5 6', '7 8 9 10', '11 12 13 14 15', '16 17 18 19 20 21']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## floyds triangle\n",
+    "\n",
+    "no = int(input(\"Enter a number : \"))\n",
+    "\n",
+    "def square_pattern(no) : \n",
+    "    lst = []\n",
+    "    count = 0\n",
+    "    for i in range(1,no+1):\n",
+    "        strr = str()\n",
+    "        for j in range(1,i+1) :\n",
+    "            count = count+1\n",
+    "            strr = strr+str(count)+\" \"\n",
+    "        lst.append(strr.strip())\n",
+    "    \n",
+    "    return lst\n",
+    "result = square_pattern(no)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## Right Angled Triangle with Numbers\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
