--- a/patternpractice.ipynb
+++ b/patternpractice.ipynb
@@ -225,8 +225,46 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['  *', ' **', '***']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Right angeled triangle 2\n",
+    "\n",
+    "no = int(input(\"Enter a number : \"))\n",
+    "\n",
+    "def square_pattern(no) : ##4\n",
+    "    lst = []\n",
+    "    for i in range(1,no+1):  ##0123 4\n",
+    "        strr = ' '\n",
+    "        star = '*'\n",
+    "        spaces = (no-i)\n",
+    "        strr = strr*spaces\n",
+    "        star = star*i\n",
+    "        final_lst_item = strr+star\n",
+    "        lst.append(final_lst_item)\n",
+    "    return lst\n",
+    "\n",
+    "result = square_pattern(no)  ## 4\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Hollow square of side 'N'\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
