--- a/patternpractice.ipynb
+++ b/patternpractice.ipynb
@@ -260,11 +260,144 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['****', '*  *', '*  *', '****']\n"
+     ]
+    }
+   ],
    "source": [
     "## Hollow square of side 'N'\n",
-    "\n"
+    "\n",
+    "no = int(input(\"Enter a number : \"))\n",
+    "\n",
+    "def square_pattern(no) : \n",
+    "    lst = []\n",
+    "    for i in range(1,no+1):  \n",
+    "        for j in range(1,no+1):\n",
+    "          final_string = str()\n",
+    "          if i == 1 :\n",
+    "              star = '*'\n",
+    "              star = star*no\n",
+    "              final_string = star\n",
+    "          if i>1 and i<no+1 :\n",
+    "            if j>1 and j<no+1 :\n",
+    "                strr = ' '\n",
+    "                star = '*'\n",
+    "                final_string = star + (strr*(no-2))+star\n",
+    "          if i == no :\n",
+    "              star = '*'\n",
+    "              star = star*no\n",
+    "              final_string = star\n",
+    "        lst.append(final_string)\n",
+    "    return lst\n",
+    "\n",
+    "result = square_pattern(no) \n",
+    "\n",
+    "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "* *\n",
+      "*  *\n",
+      "*****\n",
+      "['*', '**', '* *', '*  *', '*****']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Hollow Right Triangle\n",
+    "\n",
+    "no = int(input(\"Enter a number : \"))\n",
+    "\n",
+    "def square_pattern(no) : \n",
+    "    lst = []\n",
+    "    for i in range(1,no+1):  \n",
+    "        for j in range(1,no+1):\n",
+    "          final_string = str()\n",
+    "          if i == 1 or i == 2 :\n",
+    "              star = '*'\n",
+    "              star = star*i\n",
+    "              final_string = star\n",
+    "          if i>2 and i<no+1 :\n",
+    "            if j>2 and j<no+1 :\n",
+    "                strr = ' '\n",
+    "                star = '*'\n",
+    "                \n",
+    "                final_string = star + (strr*(i-2))+star\n",
+    "          if i == no :\n",
+    "              star = '*'\n",
+    "              star = star*i\n",
+    "              final_string = star\n",
+    "        print(final_string)\n",
+    "        lst.append(final_string)\n",
+    "    return lst\n",
+    "\n",
+    "result = square_pattern(no) \n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****\n",
+      "*  *\n",
+      "* *\n",
+      "**\n",
+      "*\n",
+      "['*****', '*  *', '* *', '**', '*']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Hollow Inverted Right Triangle\n",
+    "no = int(input(\"Enter a number : \"))\n",
+    "def square_pattern(no) : \n",
+    "    lst = []\n",
+    "    for i in range(no,0,-1): \n",
+    "        final_string = str()\n",
+    "        if i == no :\n",
+    "              final_string = '*'*i\n",
+    "        if i == 1 or i == 2 :\n",
+    "              final_string = '*'*i\n",
+    "        for j in range(no,0,-1):\n",
+    "          if i<no and i>2 :\n",
+    "            if j<no and j>2 :\n",
+    "                final_string = '*' + (' '*(i-2))+'*'\n",
+    "          \n",
+    "        print(final_string)\n",
+    "        lst.append(final_string)\n",
+    "    return lst\n",
+    "result = square_pattern(no) \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
