--- a/patternpractice.ipynb
+++ b/patternpractice.ipynb
@@ -396,6 +396,173 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['  *  ', ' *** ', '*****']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Pyramid Pattern\n",
+    "\n",
+    "no = int(input(\"Enter a number : \"))\n",
+    "def pyramid_pattern(n) : \n",
+    "    lst = []\n",
+    "    j = 1\n",
+    "    for i in range(1,n+1):\n",
+    "\n",
+    "        pattern = (' '*(n-i))+('*')*j+(' '*(n-i))\n",
+    "        j = j+2 \n",
+    "        \n",
+    "        lst.append(pattern)\n",
+    "    return lst\n",
+    "result = pyramid_pattern(no) \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['*********', ' ******* ', '  *****  ', '   ***   ', '    *    ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Inverted Pyramid Pattern\n",
+    "no = int(input(\"Enter a number : \"))\n",
+    "def pyramid_pattern(n) : \n",
+    "    lst = []\n",
+    "    j = (n*2)-1\n",
+    "    for i in range(n,0,-1):\n",
+    "\n",
+    "        pattern = (' '*(n-i))+('*')*j+(' '*(n-i))\n",
+    "        j = j-2 \n",
+    "        \n",
+    "        lst.append(pattern)\n",
+    "    return lst\n",
+    "result = pyramid_pattern(no) \n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['*******', ' ***** ', '  ***  ', '   *   ', '  ***  ', ' ***** ', '*******']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Sandglass Pattern\n",
+    "\n",
+    "no = int(input(\"Enter a number : \"))\n",
+    "def inverted_pyramid_pattern(n) : \n",
+    "    lst = []\n",
+    "    j = (n*2)-1\n",
+    "    k = 1\n",
+    "    for i in range(n,1,-1):\n",
+    "\n",
+    "           first_pattern = (' '*(n-i))+('*')*j+(' '*(n-i))\n",
+    "           j = j-2\n",
+    "           lst.append(first_pattern)\n",
+    "    for i in range(1,n+1):\n",
+    "\n",
+    "           last_pattern = (' '*(n-i))+('*')*k+(' '*(n-i))\n",
+    "           k = k+2 \n",
+    "           lst.append(last_pattern)\n",
+    "    \n",
+    "    return lst\n",
+    "result = inverted_pyramid_pattern(no) \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['  *  ', ' *** ', '*****', ' *** ', '  *  ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Diamond Pattern\n",
+    "\n",
+    "no = int(input(\"Enter a number : \"))\n",
+    "def inverted_pyramid_pattern(n) : \n",
+    "    lst = []\n",
+    "    j = (n*2)-1\n",
+    "    k = 1\n",
+    "    \n",
+    "    for i in range(1,n):\n",
+    "\n",
+    "           last_pattern = (' '*(n-i))+('*')*k+(' '*(n-i))\n",
+    "           k = k+2 \n",
+    "           lst.append(last_pattern)\n",
+    "    for i in range(n,0,-1):\n",
+    "\n",
+    "           first_pattern = (' '*(n-i))+('*')*j+(' '*(n-i))\n",
+    "           j = j-2\n",
+    "           lst.append(first_pattern)\n",
+    "    \n",
+    "    return lst\n",
+    "result = inverted_pyramid_pattern(no) \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['  1  ', ' 3 ', '5']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Number pyramid pattern\n",
+    "\n",
+    "no = int(input(\"Enter a number : \"))\n",
+    "def pyramid_pattern(n) : \n",
+    "    lst = []\n",
+    "    j = 1\n",
+    "    for i in range(1,n+1):\n",
+    "\n",
+    "        pattern = (' '*(n-i))+str(j)+(' '*(n-i))\n",
+    "        j = j+2 \n",
+    "        \n",
+    "        lst.append(pattern)\n",
+    "    return lst\n",
+    "result = pyramid_pattern(no) \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
