--- a/functionspractice.ipynb
+++ b/functionspractice.ipynb
@@ -31,9 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    }
+   ],
    "source": [
     "## Area of Rectangle\n",
     "\n",
@@ -49,6 +57,52 @@
     "result = area_of_rectangle(l,b)\n",
     "print(result)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Number of Rounds of lift\n",
+    "\n",
+    "n = int(input()) ##10\n",
+    "c = int(input()) ##3\n",
+    "\n",
+    "def no_of_rounds(n,c): ##10 3\n",
+    "    no = n\n",
+    "    capacity = c\n",
+    "    count = 0\n",
+    "\n",
+    "    while(no>capacity):   ## 10>3\n",
+    "        if no>capacity :    ## true\n",
+    "          no = no-capacity  ## 10-3 7\n",
+    "          count = count + 1 ## 1\n",
+    "        if no<capacity:\n",
+    "          count = count+1\n",
+    "\n",
+    "    return count    \n",
+    "\n",
+    "\n",
+    "result = no_of_rounds(n,c)\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
