--- a/buildindatastructurespractice.ipynb
+++ b/buildindatastructurespractice.ipynb
@@ -324,6 +324,88 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "[30, 40, 50, 10, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Rotate a List\n",
+    "\n",
+    "n1 = int(input(\"Enter list 1 size\"))\n",
+    "lst1 = []\n",
+    "for i in range(n1):\n",
+    "    lst1.append(int(input()))\n",
+    "k = int(input(\"Enter index for rotating : \"))\n",
+    "print(k)\n",
+    "def rotate_list(lst, k):\n",
+    "    final_list = []\n",
+    "    value = len(lst) - k\n",
+    "    if len(lst)>1:\n",
+    "        for i in range(value,len(lst)):\n",
+    "          final_list.append(lst[i])\n",
+    "        for j in range(value):\n",
+    "          final_list.append(lst[j])\n",
+    "        return final_list\n",
+    "    else :\n",
+    "       return final_list\n",
+    "     \n",
+    "result = rotate_list(lst1, k)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 21\u001b[0m\n\u001b[0;32m     18\u001b[0m             dictionary[key] \u001b[38;5;241m=\u001b[39m value\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m dictionary\n\u001b[1;32m---> 21\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mmerge_two_lists_to_dictionary\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlst1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlst2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n",
+      "Cell \u001b[1;32mIn[10], line 17\u001b[0m, in \u001b[0;36mmerge_two_lists_to_dictionary\u001b[1;34m(list1, list2)\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(i,i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m     16\u001b[0m         key \u001b[38;5;241m=\u001b[39m list1[i]\n\u001b[1;32m---> 17\u001b[0m         value \u001b[38;5;241m=\u001b[39m \u001b[43mlist2\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     18\u001b[0m         dictionary[key] \u001b[38;5;241m=\u001b[39m value\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m dictionary\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "## Merge two lists into dictionary\n",
+    "\n",
+    "n1 = int(input(\"Enter list 1 size\"))\n",
+    "n2 = int(input(\"Enter list 2 size\"))\n",
+    "lst1 = []\n",
+    "lst2 = []\n",
+    "for i in range(n1):\n",
+    "    lst1.append(int(input()))\n",
+    "for j in range(n2):\n",
+    "    lst2.append(int(input()))\n",
+    "\n",
+    "def merge_two_lists_to_dictionary(list1, list2):\n",
+    "    dictionary = {}\n",
+    "    for i in range(len(list1)):\n",
+    "        for j in range(i,i+1):\n",
+    "            key = list1[i]\n",
+    "            value = list2[j]\n",
+    "            dictionary[key] = value\n",
+    "    return dictionary\n",
+    "     \n",
+    "result = merge_two_lists_to_dictionary(lst1, lst2)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
