--- a/buildindatastructurespractice.ipynb
+++ b/buildindatastructurespractice.ipynb
@@ -396,10 +396,168 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': '1', 'b': '2'}\n",
+      "{'c': '3', 'd': '4'}\n",
+      "{'e': '5', 'f': '5'}\n",
+      "{'a': '1', 'b': '2', 'c': '3', 'd': '4', 'e': '5', 'f': '5'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Merge Multiple Dictionaries\n",
+    "\n",
+    "n1 = int(input(\"Enter dict 1 size\"))\n",
+    "n2 = int(input(\"Enter dict 2 size\"))\n",
+    "n3 = int(input(\"Enter dict 3 size\"))\n",
+    "dict1 = dict()\n",
+    "dict2 = dict()\n",
+    "dict3 = dict()\n",
+    "for i in range(n1):\n",
+    "    key = input(\"Enter key for dict1 :\")\n",
+    "    value = input(\"Enter value for dict1 :\")\n",
+    "    dict1[key]=value\n",
+    "for j in range(n2):\n",
+    "    key = input(\"Enter key for dict2 :\")\n",
+    "    value = input(\"Enter value for dict2 :\")\n",
+    "    dict2[key]=value\n",
+    "for k in range(n3):\n",
+    "    key = input(\"Enter key for dict3 :\")\n",
+    "    value = input(\"Enter value for dict3 :\")\n",
+    "    dict3[key]=value\n",
+    "\n",
+    "def merge_three_dictionaries(dict1, dict2, dict3):\n",
+    "    \n",
+    "    dictionary = dict1|dict2|dict3\n",
+    "    \n",
+    "    return dictionary\n",
+    "\n",
+    "\n",
+    "print(dict1)\n",
+    "print(dict2)\n",
+    "print(dict3)\n",
+    "result = merge_three_dictionaries(dict1, dict2, dict3)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'world': 1, 'hello': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Word frequency in a sentence\n",
+    "\n",
+    "sent = str(input(\"Enter the sentence :\"))\n",
+    "\n",
+    "def count_word_frequency(sentence):\n",
+    "    if sentence != ' ':\n",
+    "        lst = str.split(sentence,' ')\n",
+    "        frequency = {item: lst.count(item) for item in set(lst)}\n",
+    "\n",
+    "        return frequency\n",
+    "    else :\n",
+    "        return False\n",
+    "\n",
+    "result = count_word_frequency(sent)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Palindromic Tuple\n",
+    "tup = (1, 2, 3, 2, 1)\n",
+    "\n",
+    "def is_palindromic_tuple(tup):\n",
+    "    lst = list(tup)\n",
+    "    lst1 = []\n",
+    "    for i in range(len(lst)-1,-1,-1):\n",
+    "        lst1.append(lst[i])\n",
+    "    reversed_tup = tuple(lst1)\n",
+    "    if lst == lst1 :\n",
+    "        return True\n",
+    "    else :\n",
+    "        return False\n",
+    "\n",
+    "result = is_palindromic_tuple(tup)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3543529189.py, line 24)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 24\u001b[1;36m\u001b[0m\n\u001b[1;33m    dictionary = check_unique{dict1|dict2|dict3}\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Merge Dictionaries with Common Keys\n",
+    "\n",
+    "n1 = int(input(\"Enter dict 1 size\"))\n",
+    "n2 = int(input(\"Enter dict 2 size\"))\n",
+    "n3 = int(input(\"Enter dict 3 size\"))\n",
+    "dict1 = dict()\n",
+    "dict2 = dict()\n",
+    "dict3 = dict()\n",
+    "for i in range(n1):\n",
+    "    key = input(\"Enter key for dict1 :\")\n",
+    "    value = input(\"Enter value for dict1 :\")\n",
+    "    dict1[key]=value\n",
+    "for j in range(n2):\n",
+    "    key = input(\"Enter key for dict2 :\")\n",
+    "    value = input(\"Enter value for dict2 :\")\n",
+    "    dict2[key]=value\n",
+    "for k in range(n3):\n",
+    "    key = input(\"Enter key for dict3 :\")\n",
+    "    value = input(\"Enter value for dict3 :\")\n",
+    "    dict3[key]=value\n",
+    "\n",
+    "def merge_three_dictionaries(dict1, dict2, dict3):\n",
+    "    \n",
+    "    dictionary = dict1|dict2|dict3\n",
+    "    \n",
+    "    return dictionary\n",
+    "\n",
+    "\n",
+    "print(dict1)\n",
+    "print(dict2)\n",
+    "print(dict3)\n",
+    "result = merge_three_dictionaries(dict1, dict2, dict3)\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "code",
