--- a/searchingandsortingalgorithms.ipynb
+++ b/searchingandsortingalgorithms.ipynb
@@ -38,6 +38,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Binary Search algorithm\n",
+    "\n",
+    "size = int(input())\n",
+    "lst = []\n",
+    "for i in range(size):\n",
+    "    lst.append(int(input()))\n",
+    "tar = int(input(\"Enter the target :\"))\n",
+    "print(lst)\n",
+    "print(tar)\n",
+    "def binary_search(lst,tar):\n",
+    "\n",
+    "    start = 0\n",
+    "    end = size - 1\n",
+    "    while(start<=end):\n",
+    "        mid = (start+end)//2\n",
+    "\n",
+    "        if lst[mid] == tar:\n",
+    "            return mid\n",
+    "        elif lst[mid]>tar :\n",
+    "            end = mid - 1\n",
+    "        elif lst[mid]<tar :\n",
+    "            start = mid+1\n",
+    "    return -1\n",
+    "\n",
+    "\n",
+    "result = binary_search(lst,tar)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
