--- a/searchingandsortingalgorithms.ipynb
+++ b/searchingandsortingalgorithms.ipynb
@@ -38,19 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5]\n",
-      "1\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Binary Search algorithm\n",
     "\n",
@@ -79,6 +69,120 @@
     "\n",
     "result = binary_search(lst,tar)\n",
     "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 2, 6, 4, 5]\n",
+      "[2, 4, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Bubble Sort algorithm\n",
+    "\n",
+    "s = int(input())\n",
+    "lst = []\n",
+    "for i in range(s):\n",
+    "    lst.append(int(input()))\n",
+    "print(lst)\n",
+    "def bubble_sort(lst):\n",
+    "    \n",
+    "    size = len(lst)\n",
+    "    for i in range(size-1):\n",
+    "        for j in range(size-1):\n",
+    "            if lst[j]<lst[j+1]:\n",
+    "                continue\n",
+    "            elif lst[j] == lst[j+1]:\n",
+    "                continue\n",
+    "            else:\n",
+    "                temp = lst[j+1]\n",
+    "                lst[j+1]=lst[j]\n",
+    "                lst[j]=temp         \n",
+    "    return lst\n",
+    "result = bubble_sort(lst)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[64, 25, 12, 22, 11]\n",
+      "[11, 12, 22, 25, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## selection sort\n",
+    "\n",
+    "s = int(input())\n",
+    "lst = []\n",
+    "for i in range(s):\n",
+    "    lst.append(int(input()))\n",
+    "print(lst)\n",
+    "def selection_sort(lst):\n",
+    "    size = len(lst)\n",
+    "    for i in range(size-1):\n",
+    "            temp = min(lst[i:size])\n",
+    "            \n",
+    "            lst[lst.index(temp)] = lst[i]\n",
+    "            lst[i]=temp\n",
+    "\n",
+    "    return lst\n",
+    "\n",
+    "\n",
+    "    \n",
+    "result = selection_sort(lst)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 11, 13, 5, 6]\n",
+      "[5, 6, 11, 12, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Insertion Sort Algorithm\n",
+    "\n",
+    "s = int(input())\n",
+    "lst = []\n",
+    "for i in range(s):\n",
+    "    lst.append(int(input()))\n",
+    "print(lst)\n",
+    "def selection_sort(lst):\n",
+    "    size = len(lst)\n",
+    "    for i in range(1, size): \n",
+    "        key = lst[i]\n",
+    "        j = i - 1\n",
+    "        while j >= 0 and key < lst[j]: \n",
+    "            lst[j + 1] = lst[j]\n",
+    "            j -= 1\n",
+    "        lst[j + 1] = key \n",
+    "    return lst\n",
+    "result = selection_sort(lst)\n",
+    "print(result)"
    ]
   },
   {
