--- a/2dlist.ipynb
+++ b/2dlist.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Pascals triangle\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [
@@ -150,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,6 +150,130 @@
     "target = 0\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking\n",
+      "4\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 23\u001b[0m\n\u001b[0;32m     20\u001b[0m                    lst1\u001b[38;5;241m.\u001b[39mappend(lst[i][j])\n\u001b[0;32m     21\u001b[0m          \u001b[38;5;28;01mreturn\u001b[39;00m lst1\n\u001b[1;32m---> 23\u001b[0m \u001b[43mmatrix_reshape\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmat\u001b[49m\u001b[43m,\u001b[49m\u001b[43mr\u001b[49m\u001b[43m,\u001b[49m\u001b[43mc\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[26], line 20\u001b[0m, in \u001b[0;36mmatrix_reshape\u001b[1;34m(mat, r, c)\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(r):\n\u001b[0;32m     19\u001b[0m      \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(c):\n\u001b[1;32m---> 20\u001b[0m           lst1\u001b[38;5;241m.\u001b[39mappend(\u001b[43mlst\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m lst1\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "## Reshape matrix\n",
+    "\n",
+    "mat = [[1, 2], [3, 4]]\n",
+    "r=1\n",
+    "c=4\n",
+    "\n",
+    "def matrix_reshape(mat, r, c):\n",
+    "    print(\"Checking\")\n",
+    "    s1 = len(mat)\n",
+    "    s2 = r*c\n",
+    "    print(r*c)\n",
+    "    lst = []\n",
+    "    for i in range(len(mat)):\n",
+    "            for j in range(len(mat)):\n",
+    "                lst.append(mat[i][j])\n",
+    "    if s2 == len(lst):\n",
+    "         lst1=[]\n",
+    "         for i in range(r):\n",
+    "              for j in range(c):\n",
+    "                   lst1.append(lst[i][j])\n",
+    "         return lst1\n",
+    "\n",
+    "matrix_reshape(mat,r,c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (2580688874.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    n = len(mat[0])\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = len(mat)\n",
+    "    n = len(mat[0])\n",
+    "    \n",
+    "    # Check if reshaping is possible by comparing total elements\n",
+    "    if m * n != r * c:\n",
+    "        return mat\n",
+    " \n",
+    "    # Flatten the matrix into a 1D list\n",
+    "    flat_list = []\n",
+    "    for row in mat:\n",
+    "        for num in row:\n",
+    "            flat_list.append(num)\n",
+    "    \n",
+    "    # Create a new reshaped matrix\n",
+    "    reshaped_matrix = []\n",
+    "    for i in range(r):\n",
+    "        reshaped_matrix.append(flat_list[i * c:(i + 1) * c])\n",
+    "    \n",
+    "    return reshaped_matrix\n",
+    " \n",
+    "# Helper function for debugging (can be removed for production)\n",
+    "def display_reshaped_matrix(mat, r, c):\n",
+    "    result = matrix_reshape(mat, r, c)\n",
+    "    for row in result:\n",
+    "        print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 3, 1]\n",
+      "[1, 3, 3, 1]\n",
+      "[1, 3, 3, 1]\n",
+      "[1, 3, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [1,2,1]\n",
+    "k=0\n",
+    "for i in range(4):\n",
+    "    print([lst[k]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
