--- a/2dlist.ipynb
+++ b/2dlist.ipynb
@@ -270,10 +270,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Pascals triangle\n",
+    "n = int(input(\"Enter no of rows\"))\n",
+    "\n",
+    "\n",
+    "def generate(n):\n",
+    "    lst = []\n",
+    "    lst_final=[]\n",
+    "    for i in range(n):\n",
+    "        if i==0:\n",
+    "            lst.append(1)\n",
+    "            lst_final.append(lst.copy())\n",
+    "            lst.clear()\n",
+    "    \n",
+    "        else:\n",
+    "            for j in range(i+1):\n",
+    "                if j==0 or j==(i):\n",
+    "                    lst.append(1)\n",
+    "                else:\n",
+    "                    lst.append(lst_final[i-1][j-1]+lst_final[i-1][j])\n",
+    "            lst_final.append(lst.copy())\n",
+    "            lst.clear()          \n",
+    "    return lst_final\n",
+    "\n",
+    "result = generate(n)\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
