--- a/2dlist.ipynb
+++ b/2dlist.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -308,6 +308,65 @@
     "result = generate(n)\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 8, 12, 11, 10, 9, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Spiral Matrix\n",
+    "\n",
+    "matrix = [[1, 2, 3, 4],\n",
+    "          [5, 6, 7, 8],\n",
+    "          [9, 10, 11, 12]]\n",
+    "def spiral_order(matrix):\n",
+    "    lst =[]\n",
+    "    rb = 0\n",
+    "    re = len(matrix)\n",
+    "    cb = 0\n",
+    "    ce = len(matrix[0])\n",
+    "    while rb<=re and cb <=ce:\n",
+    "        ## Traverse right\n",
+    "        for i in range(cb,ce):\n",
+    "            lst.append(matrix[rb][i])\n",
+    "        rb=rb+1\n",
+    "        ## Traverse down\n",
+    "        for j in range(rb,re):\n",
+    "            lst.append(matrix[j][ce-1])\n",
+    "        ce = ce-1\n",
+    "        ## Traverse left\n",
+    "        if rb < re:\n",
+    "            for i in range(ce - 1, cb - 1, -1):\n",
+    "                lst.append(matrix[re - 1][i])\n",
+    "        re -= 1\n",
+    "        ## Traverse up\n",
+    "        if cb < ce:\n",
+    "            for j in range(re - 1, rb - 1, -1):\n",
+    "                lst.append(matrix[j][cb])\n",
+    "        cb += 1\n",
+    "        \n",
+    "    return lst\n",
+    "spiral_order(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
