--- a/listorarraypractice.ipynb
+++ b/listorarraypractice.ipynb
@@ -348,7 +348,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Maximum subarray sum\n",
+    "\n",
+    "arr = [-2, 1, -3, 4, -1, 2, 1, -5, 4]\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
