--- a/exceptionhandling.ipynb
+++ b/exceptionhandling.ipynb
@@ -212,6 +212,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "character Count :  47\n",
+      "lines count :  3\n",
+      "word count :  11\n"
+     ]
+    }
+   ],
+   "source": [
+    "## File handling assignment \n",
+    "## Read text file and count no of lines,words and characters\n",
+    "\n",
+    "with open(r'D:\\Krish Python\\file operations\\sample.txt','r') as fl:\n",
+    "    lines_count = 0\n",
+    "    for lines in fl:\n",
+    "        lines_count = lines_count+1\n",
+    "    fl.seek(0)\n",
+    "    con = fl.read()\n",
+    "    chars_count = len([i for i in con if i not in {' ', '\\n'}])\n",
+    "    word_lst = len(con.split())\n",
+    "    print('character Count : ',chars_count)\n",
+    "    print('lines count : ',lines_count)\n",
+    "    print('word count : ',word_lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
