--- a/encapsulation.ipynb
+++ b/encapsulation.ipynb
@@ -213,6 +213,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GAS False\n",
+      "Electric False\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Accessing outside class by using extended class\n",
+    "class Mercedes(Veh):\n",
+    "    def __init__(self, type, is_selfdriving):\n",
+    "        super().__init__(type, is_selfdriving)\n",
+    "\n",
+    "    def get_details(self):\n",
+    "        print(self._type,self._is_selfdriving)\n",
+    "    def set_details(self,type):\n",
+    "        self._type = type\n",
+    "\n",
+    "md = Mercedes(\"GAS\",False)\n",
+    "md.get_details()\n",
+    "md.set_details(\"Electric\")\n",
+    "md.get_details()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Veh' object has no attribute 'get_details'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_veh_details\u001b[39m(veh):\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(veh\u001b[38;5;241m.\u001b[39mget_details())\n\u001b[1;32m----> 5\u001b[0m \u001b[43mget_veh_details\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvh\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[22], line 3\u001b[0m, in \u001b[0;36mget_veh_details\u001b[1;34m(veh)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_veh_details\u001b[39m(veh):\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mveh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_details\u001b[49m())\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Veh' object has no attribute 'get_details'"
+     ]
+    }
+   ],
+   "source": [
+    "## Accessing outside class without extended class\n",
+    "def get_veh_details(veh):\n",
+    "    print(veh.get_details())\n",
+    "\n",
+    "get_veh_details(vh) ## Doesn't gives values since those details are protected by Veh class"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
