--- a/advancedpythonconcepts.ipynb
+++ b/advancedpythonconcepts.ipynb
@@ -189,6 +189,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start of Function\n",
+      "End of Function\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Decorators example\n",
+    "\n",
+    "## Create a decorator that prints \"Start of Function\" before the function is executed and \"End of Function\" after \n",
+    "# it is executed.\n",
+    "\n",
+    "def msg(func):\n",
+    "    def sub_msg():\n",
+    "        print(\"Start of Function\")\n",
+    "        func()\n",
+    "    return sub_msg\n",
+    "@msg\n",
+    "def print_msg():\n",
+    "    print(\"End of Function\")\n",
+    "\n",
+    "print_msg()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'SAM'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Write a decorator that converts the result of a function to uppercase.\n",
+    "\n",
+    "def convert_case(func):\n",
+    "    def sub_converter(stringg):\n",
+    "        return str.upper(stringg)\n",
+    "    return sub_converter\n",
+    "@convert_case\n",
+    "def case(stringg):\n",
+    "    print(stringg)\n",
+    "case(input(\"Enter a string\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello,John\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Implement a decorator that adds a greeting message (\"Hello, \" before the result of a function that returns a name).\n",
+    "\n",
+    "## Example: If the function returns \"John\", the decorator should return \"Hello, John\".\n",
+    "\n",
+    "def add_greet(func):\n",
+    "    def sub_greet(name):\n",
+    "        func(f\"Hello,{name}\")\n",
+    "    return sub_greet\n",
+    "@add_greet\n",
+    "def greet(name):\n",
+    "    print(name)\n",
+    "\n",
+    "greet(\"John\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Hello\n",
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Write a decorator that accepts a number n and repeats the decorated function n times.\n",
+    "## Example: If the decorator is used with @repeat(3), the function should execute 3 times.\n",
+    "\n",
+    "def repeat(n):\n",
+    "    def dec(func):\n",
+    "        def sub_dec():\n",
+    "            for i in range(n):\n",
+    "                func()\n",
+    "        return sub_dec\n",
+    "    return dec\n",
+    "\n",
+    "@repeat(3)\n",
+    "def sample():\n",
+    "    print(\"Hello\")\n",
+    "sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password authentication successful\n",
+      "Hello user\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Implement a decorator that requires the user to enter a password before executing the function.\n",
+    "\n",
+    "def password(func):\n",
+    "    def sub_password(pk):\n",
+    "        passkey = str(input(\"Enter password : \"))\n",
+    "        if passkey == pk:\n",
+    "            print(\"Password authentication successful\")\n",
+    "            func(pk)\n",
+    "        else:\n",
+    "            print(\"Incorrect password\")\n",
+    "    return sub_password\n",
+    "@password\n",
+    "def sms(pk):\n",
+    "    print(\"Hello user\")\n",
+    "\n",
+    "sms(\"1234\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
