--- a/recurrsionpractice.ipynb
+++ b/recurrsionpractice.ipynb
@@ -139,6 +139,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Fibanoci series using recurrsion\n",
+    "\n",
+    "def fibonacci(n):\n",
+    "     if n==0:\n",
+    "          return 0\n",
+    "     elif n==1:\n",
+    "          return 1\n",
+    "     \n",
+    "     return fibonacci(n-1)+fibonacci(n-2)\n",
+    "\n",
+    "\n",
+    "fibonacci(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
